--- a/index.html
+++ b/index.html
@@ -31,21 +31,9 @@
             <!-- Home page content -->
             <h3>Welcome to ASABE UF!</h3>
             <p>We are the Florida Student Branch of the American Society of Agricultural and Biological Engineers. Stay tuned for updates and upcoming events!</p>
-            <p>Upcoming GBM Schedule: Sep 23, Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
-            <p>Event reminders:</p>
-            <ul>
-                <li> Lake Wauburg social this Sunday 9/22 @11am-2pm </li>
-                <li> Resume workshop before career fair at the next GBM Sep 23rd @5 pm </li>
-                <li>Career Showcase Days and Location:</li>
-                <ul>
-                    <li>Sep. 23rd, Computer & Information Science & Engineering and AI career fair. O’Connell Center, 1 to 6 pm. Students Check-in: Gate 3.</li>
-                    <li>Sep. 24th, Non-tech Day. O’Connell Center, 9 am to 3 pm. Students Check-in: Gate 3.</li>
-                    <li>Sep. 25th, Tech Day. O’Connell Center, 9 am to 3 pm. Student Check-in: Gate 3.</li>
-                    <li>List of employeers: A Duda & Sons, Arazoza Brothers Corp., Cal-Maine Foods Inc., Coastal Greenery, Costa Farms, Davey Resource Group, JBS USA, Jones Edmunds & Associates, Inc., J.R. Simplot, Kimley-Horn, Lipman Family Farms, Mars, Suwannee River Water Management District, The Kraft Heinz Company, Topco Associates, USADA NRCS</li>
-                </ul>
-                
-            </ul>
+            <p>Upcoming GBM Schedule: Oct 23, Nov 13, Jan 22, Feb 12, Mar 5, Mar 26, Apr 16.</p>
             <p>Remember to get started on academic planning and advising appointments to get your registration holds removed!!!</p>
+            <p>Event reminders:</p>
         </section>
 
         <!-- Sticky footer -->
